src/test/deca/context/valid/While.deca
// Description:
//    condition While must be a boolean
//
// Resultats:
//    
// 
// Historique:
//    cree le 01/01/2022

{
    int a=0;
    while( a< 1 ){}
    while( a==0 ){}
    while( true ){}
    while( false ){}
    while( a>-1 ){}
    while( true && true){}

}